--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.12.4",
     "ethers": "^6.11.1",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "typescript": "^5.4.4"
   },
   "devDependencies": {
