--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ton/core": "^0.59.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.4",
     "ethers": "^6.11.1",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "tonweb": "^0.0.66",
     "typescript": "^5.4.4"
   },
   "devDependencies": {
